Customize recipes in planner
